--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -1,26 +1,28 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#__next {
+    height: 100%;
+    min-height: inherit;
+    display: flex;
+    flex-direction: column;
+}
+
+html {
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+[data-rk] {
+    flex-grow: 1;
+    display: grid;
 }
