--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -128,3 +128,18 @@ body {
     height: 0;
     pointer-events: none;
 }
+
+/* needed for tiptap bulleted lists */
+li > p {
+    display: inline-block;
+}
+
+h1 {
+    font-size: 2.5rem;
+    line-height: normal;
+}
+
+h2 {
+    font-size: 1.5rem;
+    line-height: normal;
+}
