--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -123,7 +123,7 @@ body {
 
 .ProseMirror {
     min-height: min-content;
-    max-height: 52em;
+    /* max-height: 52em; */
     overflow-y: auto;
     overflow-wrap: anywhere!important;
     /* resize: vertical; */
